# crunch

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Assets/Shader/: triangle.vert  triangle_vert.spv
Assets/Shaders/: triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv  triangle_vert.spv
Assets/Textures/: T_CrunchLogo_D.ktx2
Engine/: Crunch.hpp  Main.cpp  vulk_main.cpp
Engine/Core/: Input.cpp  Input.hpp  Window.cpp  Window.hpp
Engine/Crunch/: Assert.hpp  ClassUtility.hpp  Crunch.hpp  Filesystem.cpp  Filesystem.hpp  Log.hpp  Math.hpp  Singleton.hpp
Engine/Graphics/: API.cpp  API.hpp  Graphics.hpp  Mesh.cpp  Mesh.hpp  SPIRVReflection.cpp  SPIRVReflection.hpp  Types.hpp
Engine/Graphics/Vulkan/: API.cpp  API.hpp  Allocator.cpp  Buffer.cpp  Buffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  Debug.hpp  Driver.cpp  Driver.hpp  Extension.cpp  Extension.hpp  Extensions.cpp  Extensions.hpp  Queue.cpp  Queue.hpp  Shader.cpp  Shader.hpp  ShaderModule.cpp  ShaderModule.hpp  Structs.hpp  Texture.cpp  Texture.hpp  Types.hpp  Vulkan.cpp  Vulkan.hpp
Engine/Shared/: ClassUtility.hpp  Filesystem.cpp  Filesystem.hpp  Math.hpp
Engine/Window/: Window.cpp  Window.hpp
Lib/: CMakeLists.txt
Lib/GLM/: CMakeLists.txt
Lib/Vulkan/: libvulkan.so.1.3.269
